finish tech requirements
